# FuckCoolapkR-Release

./: .gitattributes  .gitmodules  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  fuckcoolapkr-dic.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  logging.h  native.cpp  native.h
app/src/main/java/org/fuck/coolapk/: Config.kt  CoolContext.kt  CoolapkUtils.java  StringFogImpl.java  XposedEntry.kt
app/src/main/java/org/fuck/coolapk/base/: BaseHook.kt
app/src/main/java/org/fuck/coolapk/config/: CustomRuleConfig.kt  TagBlacklistConfig.kt  TopicBlacklistConfig.kt  UidBlacklistConfig.kt
app/src/main/java/org/fuck/coolapk/hook/: CheckFeedStatus.kt  CustomVersionHook.java  DisableBugly.kt  DisableShuzilm.kt  DisableURLTracking.kt  DisableUmeng.kt  FeedPostChecker.kt  HookPackageManager.kt  HookRecyclerViewHolder.kt  HookSettings.kt  LocalBlackList.kt  ModifyAppMode.kt  ModifyShareUrl.kt  RemoveAds.kt  RemoveAuditWatermark.kt  RemoveBottomNavigation.kt  RemoveSearchActivityItem.kt  RemoveSearchBoxHotWord.kt  RemoveShareLinkTrack.kt  RemoveSharePanelItem.kt  RemoveUpdateDialog.kt  TestHook.kt
app/src/main/res/values/: array.xml  strings.xml
buildSrc/: build.gradle
buildSrc/src/main/java/org/fuck/coolapk/: StringFogImpl.java
gradle/wrapper/: gradle-wrapper.properties
libs/dexkit/: build.gradle.kts
libs/dexkit/DexKit/dexkit-android/: build.gradle
stub/: build.gradle
stub/src/main/java/sun/misc/: Unsafe.java
(+16 files in other folders)
